--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     </svg>
                 </div>
                 <div class="story-grid grid grid-cols-1 md:grid-cols-2 gap-6 md:gap-8">
-                    <!-- <a class="group block animate-fade-in-up" href="/story/story.html?id=4"
+                    <!-- <a class="group block animate-fade-in-up" href="story/story.html?id=4"
                         style="animation-delay: 0s;">
                         <article
                             class="relative overflow-hidden rounded-3xl border-2 bg-card transition-all duration-500 hover:scale-[1.02] hover:shadow-card-hover shadow-card border-gold/30 hover:border-gold/60">
@@ -159,7 +159,7 @@
                         </article>
                     </a> -->
 
-                    <a class="group block animate-fade-in-up" href="/story/story.html?id=1"
+                    <a class="group block animate-fade-in-up" href="story/story.html?id=1"
                         style="animation-delay: 0.1s;">
                         <article
                             class="relative overflow-hidden rounded-3xl border-2 bg-card transition-all duration-500 hover:scale-[1.02] hover:shadow-card-hover shadow-card border-gold/30 hover:border-gold/60">
@@ -206,7 +206,7 @@
                         </article>
                     </a>
 
-                    <a class="group block animate-fade-in-up" href="/story/story.html?id=5"
+                    <a class="group block animate-fade-in-up" href="story/story.html?id=5"
                         style="animation-delay: 0.2s;">
                         <article
                             class="relative overflow-hidden rounded-3xl border-2 bg-card transition-all duration-500 hover:scale-[1.02] hover:shadow-card-hover shadow-card border-gold/30 hover:border-gold/60">
@@ -254,7 +254,7 @@
                         </article>
                     </a>
 
-                    <a class="group block animate-fade-in-up" href="/story/story.html?id=2"
+                    <a class="group block animate-fade-in-up" href="story/story.html?id=2"
                         style="animation-delay: 0.3s;">
                         <article
                             class="relative overflow-hidden rounded-3xl border-2 bg-card transition-all duration-500 hover:scale-[1.02] hover:shadow-card-hover shadow-card border-gold/30 hover:border-gold/60">
@@ -302,7 +302,7 @@
                         </article>
                     </a>
 
-                    <a class="group block animate-fade-in-up" href="/story/story.html?id=3"
+                    <a class="group block animate-fade-in-up" href="story/story.html?id=3"
                         style="animation-delay: 0.4s;">
                         <article
                             class="relative overflow-hidden rounded-3xl border-2 bg-card transition-all duration-500 hover:scale-[1.02] hover:shadow-card-hover shadow-card border-gold/30 hover:border-gold/60">
@@ -350,7 +350,7 @@
                         </article>
                     </a>
 
-                    <a class="group block animate-fade-in-up" href="/story/story.html?id=4"
+                    <a class="group block animate-fade-in-up" href="story/story.html?id=4"
                         style="animation-delay: 0.5s;">
                         <article
                             class="relative overflow-hidden rounded-3xl border-2 bg-card transition-all duration-500 hover:scale-[1.02] hover:shadow-card-hover shadow-card border-gold/30 hover:border-gold/60">
