--- a/index.html
+++ b/index.html
@@ -259,7 +259,8 @@
                         <article
                             class="relative overflow-hidden rounded-3xl border-2 bg-card transition-all duration-500 hover:scale-[1.02] hover:shadow-card-hover shadow-card border-gold/30 hover:border-gold/60">
                             <div class="relative h-48 md:h-56 overflow-hidden">
-                                <img src="img/10469698_773123926081072_1811501353200447171_n.jpg" alt="قصص عجائب في القرآن"
+                                <img src="img/10469698_773123926081072_1811501353200447171_n.jpg"
+                                    alt="قصص عجائب في القرآن"
                                     class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
                                 <div
                                     class="absolute inset-0 bg-gradient-to-t from-foreground/60 via-transparent to-transparent">
@@ -397,19 +398,21 @@
                         </article>
                     </a>
                 </div>
-                <div class="mt-16 text-center">
+                <a href="https://engmohamednasr74.github.io/Portfolio/" target="_blank">
                     <div
-                        class="inline-flex items-center gap-2 px-6 py-3 rounded-full bg-card border border-border shadow-sm">
-                        <span class="text-xl">🌙</span>
-                        <p class="text-muted-foreground font-medium">قصص تربوية من القرآن الكريم للأطفال</p><span
-                            class="text-xl">🏮</span>
+                        class="mt-16 text-center transition-all duration-500 hover:scale-[1.02] shadow-card border-gold/30 hover:border-gold/60 border-2 bg-card" style="display: inline-block; border-radius: 60px;">
+                        <div
+                            class="inline-flex items-center gap-2 px-6 py-3 rounded-full bg-card  border-border shadow-sm">
+                            <span class="text-xl">🌙</span>
+                            <p class="text-muted-foreground font-medium">تواصل مع المطور</p><span
+                                class="text-xl">🏮</span>
+                        </div>
                     </div>
-                </div>
+                </a>
             </main>
         </div>
     </div>
     <script src="index.js"></script>
-
 </body>
 
 </html>
