--- a/story/story.html
+++ b/story/story.html
@@ -205,6 +205,15 @@
                     </div>
                 </div>
             </div>
+            <a href="https://engmohamednasr74.github.io/Portfolio/" target="_blank">
+                <div class="mt-16 text-center transition-all duration-500 hover:scale-[1.02] shadow-card border-gold/30 hover:border-gold/60 border-2 bg-card"
+                    style="display: inline-block; border-radius: 60px;">
+                    <div class="inline-flex items-center gap-2 px-6 py-3 rounded-full bg-card  border-border shadow-sm">
+                        <span class="text-xl">🌙</span>
+                        <p class="text-muted-foreground font-medium">تواصل مع المطور</p><span class="text-xl">🏮</span>
+                    </div>
+                </div>
+            </a>
         </main>
     </div>
 
