--- a/story/story.html
+++ b/story/story.html
@@ -61,7 +61,7 @@
                     <path d="M5 18H3"></path>
                 </svg>
             </div>
-            <div class="container relative"><a class="block text-center group" href="/">
+            <div class="container relative"><a class="block text-center group" href="../index.html">
                     <div class="inline-flex items-center gap-3 mb-3"><span
                             class="text-3xl animate-bounce-gentle">🏮</span>
                         <h1 class="text-4xl md:text-6xl font-extrabold text-gradient-sunset">لَمّة القصص</h1><span
