--- a/index.html
+++ b/index.html
@@ -5,18 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>لَمّة القصص | قصص القرآن للأطفال</title>
     <meta name="description"
-        content="قصص تربوية من القرآن الكريم للأطفال - قصص الأنبياء، حيوانات القرآن، بشر القرآن، ونساء القرآن">
-    <meta name="author" content="Lemat Al-Qasas">
-    <meta name="keywords" content="قصص أطفال, قصص القرآن, قصص الأنبياء, حيوانات القرآن, رمضان">
+        content="لمة القصص - قصص قرآنية ممتعة للأطفال بالصلصال والكرتون. تعلم قصص الأنبياء، النساء، الحيوانات والعجائب في القرآن بطريقة رمضانية مبهجة ومفيدة.">
 
-    <meta property="og:title" content="لَمّة القصص | قصص القرآن للأطفال">
-    <meta property="og:description" content="قصص تربوية من القرآن الكريم للأطفال من برامج رمضان المصرية">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png">
+    <meta name="keywords"
+        content="قصص قرآنية للأطفال, قصص الأنبياء, قصص النساء في القرآن, قصص الحيوان في القرآن, قصص العجائب في القرآن, كرتون إسلامي, صلصال, رمضان, قصص دينية للأطفال, لمة القصص">
 
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@LematAlQasas">
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png">
+    <meta name="author" content="Developer_Engineer Eng_Mohamed_Nasr_Mohamed_Ali_Younes">
+
+    <meta property="og:title" content="لمة القصص | قصص قرآنية للأطفال بالصلصال والكرتون" />
+    <meta property="og:description"
+        content="قصص قرآنية ممتعة ومفيدة للأطفال بأسلوب الصلصال والكرتون. رحلة مبهجة مع الأنبياء والعجائب في القرآن 🌙" />
+    <meta property="og:image"
+        content="https://raw.githubusercontent.com/engmohamednasr74/lamet_el_kesas/refs/heads/main/qr_code/Gemini_Generated_Image_1orgu61orgu61org2.png" />
+    <meta property="og:image:width" content="1024" />
+    <meta property="og:image:height" content="1024" />
+    <meta property="og:url" content="https://engmohamednasr74.github.io/lamet_el_kesas/index.html" />
+    <meta property="og:type" content="website" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="لمة القصص | قصص قرآنية للأطفال" />
+    <meta name="twitter:description"
+        content="قصص قرآنية ممتعة بالصلصال والكرتون للأطفال. تعلم واستمتع مع لمة القصص 🌙" />
+    <meta name="twitter:image"
+        content="https://raw.githubusercontent.com/engmohamednasr74/lamet_el_kesas/refs/heads/main/qr_code/Gemini_Generated_Image_1orgu61orgu61org2.png" />
 
     <script src="https://cdn.tailwindcss.com" data-tailwind-jit="true"></script>
     <link rel="stylesheet" href="css/index.css">
