--- a/index.html
+++ b/index.html
@@ -5,18 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>لَمّة القصص | قصص القرآن للأطفال</title>
     <meta name="description"
-        content="قصص تربوية من القرآن الكريم للأطفال - قصص الأنبياء، حيوانات القرآن، بشر القرآن، ونساء القرآن">
-    <meta name="author" content="Lemat Al-Qasas">
-    <meta name="keywords" content="قصص أطفال, قصص القرآن, قصص الأنبياء, حيوانات القرآن, رمضان">
+        content="لمة القصص - قصص قرآنية ممتعة للأطفال بالصلصال والكرتون. تعلم قصص الأنبياء، النساء، الحيوانات والعجائب في القرآن بطريقة رمضانية مبهجة ومفيدة.">
 
-    <meta property="og:title" content="لَمّة القصص | قصص القرآن للأطفال">
-    <meta property="og:description" content="قصص تربوية من القرآن الكريم للأطفال من برامج رمضان المصرية">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png">
+    <meta name="keywords"
+        content="قصص قرآنية للأطفال, قصص الأنبياء, قصص النساء في القرآن, قصص الحيوان في القرآن, قصص العجائب في القرآن, كرتون إسلامي, صلصال, رمضان, قصص دينية للأطفال, لمة القصص">
 
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@LematAlQasas">
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png">
+    <meta name="author" content="Developer_Engineer Eng_Mohamed_Nasr_Mohamed_Ali_Younes">
+
+    <meta property="og:title" content="لمة القصص | قصص قرآنية للأطفال بالصلصال والكرتون" />
+    <meta property="og:description"
+        content="قصص قرآنية ممتعة ومفيدة للأطفال بأسلوب الصلصال والكرتون. رحلة مبهجة مع الأنبياء والعجائب في القرآن 🌙" />
+    <meta property="og:image"
+        content="https://raw.githubusercontent.com/engmohamednasr74/lamet_el_kesas/refs/heads/main/qr_code/Gemini_Generated_Image_1orgu61orgu61org2.png" />
+    <meta property="og:image:width" content="1024" />
+    <meta property="og:image:height" content="1024" />
+    <meta property="og:url" content="https://engmohamednasr74.github.io/lamet_el_kesas/index.html" />
+    <meta property="og:type" content="website" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="لمة القصص | قصص قرآنية للأطفال" />
+    <meta name="twitter:description"
+        content="قصص قرآنية ممتعة بالصلصال والكرتون للأطفال. تعلم واستمتع مع لمة القصص 🌙" />
+    <meta name="twitter:image"
+        content="https://raw.githubusercontent.com/engmohamednasr74/lamet_el_kesas/refs/heads/main/qr_code/Gemini_Generated_Image_1orgu61orgu61org2.png" />
 
     <script src="https://cdn.tailwindcss.com" data-tailwind-jit="true"></script>
     <link rel="stylesheet" href="css/index.css">
@@ -73,7 +84,7 @@
                         <path d="M4 17v2"></path>
                         <path d="M5 18H3"></path>
                     </svg></div>
-                <div class="container relative"><a class="block text-center group" href="/">
+                <div class="container relative"><a class="block text-center group" href="index.html">
                         <div class="inline-flex items-center gap-3 mb-3"><span
                                 class="text-3xl animate-bounce-gentle">🏮</span>
                             <h1 class="text-4xl md:text-6xl font-extrabold text-gradient-sunset">لَمّة القصص</h1><span
@@ -111,7 +122,7 @@
                     </svg>
                 </div>
                 <div class="story-grid grid grid-cols-1 md:grid-cols-2 gap-6 md:gap-8">
-                    <!-- <a class="group block animate-fade-in-up" href="/story/story.html?id=4"
+                    <!-- <a class="group block animate-fade-in-up" href="story/story.html?id=4"
                         style="animation-delay: 0s;">
                         <article
                             class="relative overflow-hidden rounded-3xl border-2 bg-card transition-all duration-500 hover:scale-[1.02] hover:shadow-card-hover shadow-card border-gold/30 hover:border-gold/60">
@@ -159,7 +170,7 @@
                         </article>
                     </a> -->
 
-                    <a class="group block animate-fade-in-up" href="/story/story.html?id=1"
+                    <a class="group block animate-fade-in-up" href="story/story.html?id=1"
                         style="animation-delay: 0.1s;">
                         <article
                             class="relative overflow-hidden rounded-3xl border-2 bg-card transition-all duration-500 hover:scale-[1.02] hover:shadow-card-hover shadow-card border-gold/30 hover:border-gold/60">
@@ -206,7 +217,7 @@
                         </article>
                     </a>
 
-                    <a class="group block animate-fade-in-up" href="/story/story.html?id=5"
+                    <a class="group block animate-fade-in-up" href="story/story.html?id=5"
                         style="animation-delay: 0.2s;">
                         <article
                             class="relative overflow-hidden rounded-3xl border-2 bg-card transition-all duration-500 hover:scale-[1.02] hover:shadow-card-hover shadow-card border-gold/30 hover:border-gold/60">
@@ -254,12 +265,13 @@
                         </article>
                     </a>
 
-                    <a class="group block animate-fade-in-up" href="/story/story.html?id=2"
+                    <a class="group block animate-fade-in-up" href="story/story.html?id=2"
                         style="animation-delay: 0.3s;">
                         <article
                             class="relative overflow-hidden rounded-3xl border-2 bg-card transition-all duration-500 hover:scale-[1.02] hover:shadow-card-hover shadow-card border-gold/30 hover:border-gold/60">
                             <div class="relative h-48 md:h-56 overflow-hidden">
-                                <img src="img/10469698_773123926081072_1811501353200447171_n.jpg" alt="قصص عجائب في القرآن"
+                                <img src="img/10469698_773123926081072_1811501353200447171_n.jpg"
+                                    alt="قصص عجائب في القرآن"
                                     class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
                                 <div
                                     class="absolute inset-0 bg-gradient-to-t from-foreground/60 via-transparent to-transparent">
@@ -302,7 +314,7 @@
                         </article>
                     </a>
 
-                    <a class="group block animate-fade-in-up" href="/story/story.html?id=3"
+                    <a class="group block animate-fade-in-up" href="story/story.html?id=3"
                         style="animation-delay: 0.4s;">
                         <article
                             class="relative overflow-hidden rounded-3xl border-2 bg-card transition-all duration-500 hover:scale-[1.02] hover:shadow-card-hover shadow-card border-gold/30 hover:border-gold/60">
@@ -350,7 +362,7 @@
                         </article>
                     </a>
 
-                    <a class="group block animate-fade-in-up" href="/story/story.html?id=4"
+                    <a class="group block animate-fade-in-up" href="story/story.html?id=4"
                         style="animation-delay: 0.5s;">
                         <article
                             class="relative overflow-hidden rounded-3xl border-2 bg-card transition-all duration-500 hover:scale-[1.02] hover:shadow-card-hover shadow-card border-gold/30 hover:border-gold/60">
@@ -397,19 +409,21 @@
                         </article>
                     </a>
                 </div>
-                <div class="mt-16 text-center">
-                    <div
-                        class="inline-flex items-center gap-2 px-6 py-3 rounded-full bg-card border border-border shadow-sm">
-                        <span class="text-xl">🌙</span>
-                        <p class="text-muted-foreground font-medium">قصص تربوية من القرآن الكريم للأطفال</p><span
-                            class="text-xl">🏮</span>
+                <a href="https://engmohamednasr74.github.io/Portfolio/" target="_blank">
+                    <div class="mt-16 text-center transition-all duration-500 hover:scale-[1.02] shadow-card border-gold/30 hover:border-gold/60 border-2 bg-card"
+                        style="display: inline-block; border-radius: 60px;">
+                        <div
+                            class="inline-flex items-center gap-2 px-6 py-3 rounded-full bg-card  border-border shadow-sm">
+                            <span class="text-xl">🌙</span>
+                            <p class="text-muted-foreground font-medium">تواصل مع المطور</p><span
+                                class="text-xl">🏮</span>
+                        </div>
                     </div>
-                </div>
+                </a>
             </main>
         </div>
     </div>
     <script src="index.js"></script>
-
 </body>
 
 </html>
