--- a/story/story.html
+++ b/story/story.html
@@ -61,7 +61,7 @@
                     <path d="M5 18H3"></path>
                 </svg>
             </div>
-            <div class="container relative"><a class="block text-center group" href="/">
+            <div class="container relative"><a class="block text-center group" href="../index.html">
                     <div class="inline-flex items-center gap-3 mb-3"><span
                             class="text-3xl animate-bounce-gentle">🏮</span>
                         <h1 class="text-4xl md:text-6xl font-extrabold text-gradient-sunset">لَمّة القصص</h1><span
@@ -99,7 +99,11 @@
                                     <source src="" type="video/mp4">
                                     متصفحك لا يدعم تشغيل الفيديو.
                                 </video>
-
+                            <div id="loading-text"
+                                class="absolute inset-0 flex items-center justify-center bg-black/70 text-white text-2xl font-bold z-10"
+                                style="display: none;">
+                                جاري تحميل الفيديو...
+                            </div>
                                 <!-- Overlay مع زر Play الكبير -->
                                 <div
                                     class="play-overlay absolute inset-0 flex items-center justify-center bg-black/40 transition-opacity duration-500 opacity-100 group-hover:bg-black/60">
@@ -205,6 +209,15 @@
                     </div>
                 </div>
             </div>
+            <a href="https://engmohamednasr74.github.io/Portfolio/" target="_blank">
+                <div class="mt-16 text-center transition-all duration-500 hover:scale-[1.02] shadow-card border-gold/30 hover:border-gold/60 border-2 bg-card"
+                    style="display: inline-block; border-radius: 60px;">
+                    <div class="inline-flex items-center gap-2 px-6 py-3 rounded-full bg-card  border-border shadow-sm">
+                        <span class="text-xl">🌙</span>
+                        <p class="text-muted-foreground font-medium">تواصل مع المطور</p><span class="text-xl">🏮</span>
+                    </div>
+                </div>
+            </a>
         </main>
     </div>
 
