--- a/index.html
+++ b/index.html
@@ -122,19 +122,21 @@
                     </svg>
                 </div>
                 <div class="story-grid grid grid-cols-1 md:grid-cols-2 gap-6 md:gap-8">
-                    <!-- <a class="group block animate-fade-in-up" href="story/story.html?id=4"
-                        style="animation-delay: 0s;">
+                    <a class="group block animate-fade-in-up" href="story/story.html?id=6" style="animation-delay: 0s;">
                         <article
                             class="relative overflow-hidden rounded-3xl border-2 bg-card transition-all duration-500 hover:scale-[1.02] hover:shadow-card-hover shadow-card border-gold/30 hover:border-gold/60">
                             <div class="relative h-48 md:h-56 overflow-hidden">
-                                <img src="img/Gemini_Generated_Image_cg495kcg495kcg49.png" alt="قصص الأنبياء والقرآن بالصلصال"
+                                <img src="img/Gemini_Generated_Image_cg495kcg495kcg49.png" alt="قصص الأنبياء بالصلصال"
                                     class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
                                 <div
                                     class="absolute inset-0 bg-gradient-to-t from-foreground/60 via-transparent to-transparent">
                                 </div>
+
                                 <div
                                     class="absolute top-4 left-4 bg-card/90 backdrop-blur-sm rounded-full px-3 py-1 text-sm font-bold text-foreground shadow-sm">
-                                    1998</div>
+                                    1998
+                                </div>
+
                                 <div
                                     class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
                                     <div
@@ -147,6 +149,7 @@
                                         </svg>
                                     </div>
                                 </div>
+
                                 <div
                                     class="absolute bottom-4 left-4 flex items-center gap-2 bg-card/90 backdrop-blur-sm rounded-full px-3 py-1.5 shadow-sm">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -155,20 +158,136 @@
                                         class="lucide lucide-clock w-4 h-4 text-muted-foreground">
                                         <circle cx="12" cy="12" r="10"></circle>
                                         <polyline points="12 6 12 12 16 14"></polyline>
-                                    </svg><span class="text-sm font-medium text-foreground">30 حلقة</span>
+                                    </svg>
+                                    <span class="text-sm font-medium text-foreground">24 حلقة</span>
                                 </div>
                             </div>
+
                             <div class="p-5 md:p-6">
                                 <h2
                                     class="text-2xl md:text-3xl font-bold text-foreground mb-1 group-hover:text-primary transition-colors">
-                                    قصص الأنبياء والقرآن بالصلصال</h2>
+                                    قصص الأنبياء بالصلصال
+                                </h2>
                                 <p class="text-sm text-primary font-medium mb-3">بالصلصال المتحرك</p>
-                                <p class="text-muted-foreground text-sm leading-relaxed line-clamp-2">رحلة ممتعة مع قصص
-                                    الأنبياء الكرام بأسلوب الصلصال المتحرك الجميل. تعلم معنا قصص آدم ونوح وإبراهيم وموسى
-                                    وعيسى ومحمد عليهم السلام.</p>
+                                <p class="text-muted-foreground text-sm leading-relaxed line-clamp-2">
+                                    رحلة ساحرة مع أجمل قصص الأنبياء عليهم السلام بأسلوب الصلصال المتحرك الرائع.
+                                    من آدم أبو البشر إلى سيدنا محمد خاتم الأنبياء.. قصص ممتعة ومفيدة لقلوب الأطفال.
+                                </p>
                             </div>
                         </article>
-                    </a> -->
+                    </a>
+
+                    <a class="group block animate-fade-in-up" href="story/story.html?id=7" style="animation-delay: 0s;">
+                        <article
+                            class="relative overflow-hidden rounded-3xl border-2 bg-card transition-all duration-500 hover:scale-[1.02] hover:shadow-card-hover shadow-card border-gold/30 hover:border-gold/60">
+                            <div class="relative h-48 md:h-56 overflow-hidden">
+                                <img src="img/Gemini_Generated_Image_d65yk5d65yk5d65y.png" alt="قصص القرآن بالصلصال"
+                                    class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
+                                <div
+                                    class="absolute inset-0 bg-gradient-to-t from-foreground/60 via-transparent to-transparent">
+                                </div>
+
+                                <div
+                                    class="absolute top-4 left-4 bg-card/90 backdrop-blur-sm rounded-full px-3 py-1 text-sm font-bold text-foreground shadow-sm">
+                                    1998
+                                </div>
+
+                                <div
+                                    class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                                    <div
+                                        class="w-16 h-16 rounded-full bg-card/90 backdrop-blur-sm flex items-center justify-center shadow-glow-lg animate-pop">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                            viewBox="0 0 24 24" fill="currentColor" stroke="currentColor"
+                                            stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                            class="lucide lucide-play w-8 h-8 text-primary mr-[-4px]">
+                                            <polygon points="6 3 20 12 6 21 6 3"></polygon>
+                                        </svg>
+                                    </div>
+                                </div>
+
+                                <div
+                                    class="absolute bottom-4 left-4 flex items-center gap-2 bg-card/90 backdrop-blur-sm rounded-full px-3 py-1.5 shadow-sm">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                        fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round"
+                                        class="lucide lucide-clock w-4 h-4 text-muted-foreground">
+                                        <circle cx="12" cy="12" r="10"></circle>
+                                        <polyline points="12 6 12 12 16 14"></polyline>
+                                    </svg>
+                                    <span class="text-sm font-medium text-foreground">25 حلقة</span>
+                                </div>
+                            </div>
+
+                            <div class="p-5 md:p-6">
+                                <h2
+                                    class="text-2xl md:text-3xl font-bold text-foreground mb-1 group-hover:text-primary transition-colors">
+                                    قصص القرآن بالصلصال
+                                </h2>
+                                <p class="text-sm text-primary font-medium mb-3">بالصلصال المتحرك</p>
+                                <p class="text-muted-foreground text-sm leading-relaxed line-clamp-2">
+                                    عجائب قرآنية مذهلة بأسلوب الصلصال الساحر.
+                                    من ذو القرنين إلى أصحاب الكهف والسامري والرس.. قصص مليئة بالمعجزات والعبر لقلوب
+                                    الأطفال.
+                                </p>
+                            </div>
+                        </article>
+                    </a>
+
+                    <a class="group block animate-fade-in-up" href="story/story.html?id=8" style="animation-delay: 0s;">
+                        <article
+                            class="relative overflow-hidden rounded-3xl border-2 bg-card transition-all duration-500 hover:scale-[1.02] hover:shadow-card-hover shadow-card border-gold/30 hover:border-gold/60">
+                            <div class="relative h-48 md:h-56 overflow-hidden">
+                                <img src="img/Gemini_Generated_Image_cg495kcg495kcg49.png"
+                                    alt="قصص المبشرون بالجنة بالصلصال"
+                                    class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
+                                <div
+                                    class="absolute inset-0 bg-gradient-to-t from-foreground/60 via-transparent to-transparent">
+                                </div>
+
+                                <div
+                                    class="absolute top-4 left-4 bg-card/90 backdrop-blur-sm rounded-full px-3 py-1 text-sm font-bold text-foreground shadow-sm">
+                                    2020
+                                </div>
+
+                                <div
+                                    class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                                    <div
+                                        class="w-16 h-16 rounded-full bg-card/90 backdrop-blur-sm flex items-center justify-center shadow-glow-lg animate-pop">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                            viewBox="0 0 24 24" fill="currentColor" stroke="currentColor"
+                                            stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                            class="lucide lucide-play w-8 h-8 text-primary mr-[-4px]">
+                                            <polygon points="6 3 20 12 6 21 6 3"></polygon>
+                                        </svg>
+                                    </div>
+                                </div>
+
+                                <div
+                                    class="absolute bottom-4 left-4 flex items-center gap-2 bg-card/90 backdrop-blur-sm rounded-full px-3 py-1.5 shadow-sm">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                        fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round"
+                                        class="lucide lucide-clock w-4 h-4 text-muted-foreground">
+                                        <circle cx="12" cy="12" r="10"></circle>
+                                        <polyline points="12 6 12 12 16 14"></polyline>
+                                    </svg>
+                                    <span class="text-sm font-medium text-foreground">30 حلقة</span>
+                                </div>
+                            </div>
+
+                            <div class="p-5 md:p-6">
+                                <h2
+                                    class="text-2xl md:text-3xl font-bold text-foreground mb-1 group-hover:text-primary transition-colors">
+                                    قصص المبشرون بالجنة بالصلصال
+                                </h2>
+                                <p class="text-sm text-primary font-medium mb-3">بالصلصال المتحرك</p>
+                                <p class="text-muted-foreground text-sm leading-relaxed line-clamp-2">
+                                    أجمل قصص العشرة المبشرين بالجنة وأمهات المؤمنين بأسلوب الصلصال الساحر.
+                                    من أبي بكر وعمر إلى علي وخديجة وفاطمة وآسية.. قدوات إيمانية ملهمة لقلوب الأطفال.
+                                </p>
+                            </div>
+                        </article>
+                    </a>
 
                     <a class="group block animate-fade-in-up" href="story/story.html?id=1"
                         style="animation-delay: 0.1s;">
@@ -410,20 +529,15 @@
                     </a>
                 </div>
                 <a href="https://engmohamednasr74.github.io/Portfolio/" target="_blank">
-<<<<<<< HEAD
                     <div class="mt-16 text-center transition-all duration-500 hover:scale-[1.02] shadow-card border-gold/30 hover:border-gold/60 border-2 bg-card"
                         style="display: inline-block; border-radius: 60px;">
-=======
-                    <div
-                        class="mt-16 text-center transition-all duration-500 hover:scale-[1.02] shadow-card border-gold/30 hover:border-gold/60 border-2 bg-card" style="display: inline-block; border-radius: 60px;">
->>>>>>> 9d649c70e659fe2776b52ac724ba69fc953af013
-                        <div
-                            class="inline-flex items-center gap-2 px-6 py-3 rounded-full bg-card  border-border shadow-sm">
-                            <span class="text-xl">🌙</span>
-                            <p class="text-muted-foreground font-medium">تواصل مع المطور</p><span
-                                class="text-xl">🏮</span>
-                        </div>
-                    </div>
+
+                            <div
+                                class="inline-flex items-center gap-2 px-6 py-3 rounded-full bg-card  border-border shadow-sm">
+                                <span class="text-xl">🌙</span>
+                                <p class="text-muted-foreground font-medium">تواصل مع المطور</p><span
+                                    class="text-xl">🏮</span>
+                            </div>
                 </a>
             </main>
         </div>
