--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                             <div class="p-5 md:p-6">
                                 <h2
                                     class="text-2xl md:text-3xl font-bold text-foreground mb-1 group-hover:text-primary transition-colors">
-                                    قصص المبشرون بالجنة بالصلصال
+                                    قصص المبشرون بالجنة
                                 </h2>
                                 <p class="text-sm text-primary font-medium mb-3">بالصلصال المتحرك</p>
                                 <p class="text-muted-foreground text-sm leading-relaxed line-clamp-2">
